# algotour-native

./: .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.deps  docker-compose.yml  out.json  req.txt  start.sh
.github/workflows/: docker-image.yml
QueueWorker/: algotourrouter_pb2.py  algotourrouter_pb2.pyi  algotourrouter_pb2_grpc.py  main.py
src/: GeoTiffLoader.cpp  GeoTiffLoader.h  Postprocessor.cpp  Postprocessor.h  QueueItem.cpp  QueueItem.h  RouteRequest.cpp  RouteRequest.h  helpers.h  main.cpp
src/protos/: algotourrouter.proto
